# clerk-dynamodb-sync

./: .cursorrules  .gitignore  README.md  diagram.puml  prd.md  pyproject.toml  setup-app.txt  setup-mcps.txt
agents/: agents.md  workflow-author.md  workflow-reviewer.md
docs/: git-branching-policy.md  n8n-official-links.md  n8n-workflow-data-model.md
kb/: company_profile.md  workflow_style.md
mcp/: __init__.py
mcp/n8n_workflows_mcp/: README.md  __init__.py  mcp.json  server.py
schemas/: n8n-workflow.schema.json
